fix(sausage links): gradient on ios

--- a/source/wink-nlp/styles/jsdoc.css
+++ b/source/wink-nlp/styles/jsdoc.css
@@ -816,15 +816,15 @@ html[data-search-mode] .level-hide {
     pointer-events: none;
     position: absolute;
     top: 1em;
-    width: 40px;
+    width: 60px;
     z-index: 2;
 }
 .sausage-links:before {
-    background: linear-gradient(to right, rgba(255,255,255,0) 0%, #222 100%);
+    background: linear-gradient(to right, rgba(34,34,34,0) 0%, rgba(34,34,34,100) 100%);
     right: 0;
 }
 .sausage-links:after {
-    background: linear-gradient(to left, rgba(255,255,255,0) 0%, #222 100%);
+    background: linear-gradient(to left, rgba(34,34,34,0) 0%, rgba(34,34,34,100) 100%);
     left: 0;
 }
 
